0.1/reference/cli/index.md
# icp

**Usage:** `icp [OPTIONS] [COMMAND]`

###### **Subcommands:**

* [`build`](build.md) — Build canisters
* [`canister`](canister.md) — Perform canister operations against a network
* [`cycles`](cycles.md) — Mint and manage cycles
* [`deploy`](deploy.md) — Deploy a project to an environment
* [`environment`](environment.md) — Show information about the current project environments
* [`identity`](identity.md) — Manage your identities
* [`network`](network.md) — Launch and manage local test networks
* [`new`](new.md) — Create a new ICP project from a template
* [`project`](project.md) — Display information about the current project
* [`sync`](sync.md) — Synchronize canisters
* [`token`](token.md) — Perform token transactions

###### **Options:**

* `--project-root-override <PROJECT_ROOT_OVERRIDE>` — Directory to use as your project root directory. If not specified the directory structure is traversed up until an icp.yaml file is found
* `--debug` — Enable debug logging

  Default value: `false`
* `--identity-password-file <FILE>` — Read identity password from a file instead of prompting




