1.5/reference/cli/index.md
# icp

**Usage:** `icp [OPTIONS] [COMMAND]`

###### **Subcommands:**

* [`build`](build.md) — Build canisters
* [`canister`](canister.md) — Perform canister operations against a network
* [`completions`](completions.md) — Generate a shell completion script
* [`cycles`](cycles.md) — Mint and manage cycles
* [`deploy`](deploy.md) — Deploy a project to an environment
* [`environment`](environment.md) — Show information about the current project environments
* [`identity`](identity.md) — Manage your identities
* [`message`](message.md) — Work with signed messages
* [`network`](network.md) — Launch and manage local test networks
* [`new`](new.md) — Create a new ICP project from a template
* [`project`](project.md) — Manage the current project
* [`settings`](settings.md) — Configure user settings
* [`sync`](sync.md) — Synchronize canisters
* [`token`](token.md) — Perform token transactions

###### **Options:**

* `--project-root-override <PROJECT_ROOT_OVERRIDE>` — Directory to use as your project root directory. If not specified the directory structure is traversed up to the workspace root (the top-most project that declares the one you are in as a dependency)
* `--debug` — Enable debug logging

  Default value: `false`
* `--identity-password-file <FILE>` — Read identity password from a file instead of prompting




